5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1758_1583.log
== SUBMITION (2019-05-28 11:28:17) 
-- CODE:
from numpy import*
a = input("numero:")
j = 3
i = 3
k = 6
while (j<len(a)):
	n+="."+s[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.495028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1583/main.py", line 11, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:28:50) 
-- CODE:
from numpy import*
a = input("numero:")
n = a[0:3]
j = 3
i = 3
k = 6
while (j<len(a)):
	n+="."+s[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.554426
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:29:48) 
-- CODE:
from numpy import*
a = input("numero:")
n = a[0:3]
j = 3
i = 3
k = 6
while (j<len(a)):
	n+="."+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.38559
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
